--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -22,7 +22,7 @@ jobs:
 
       - uses: actions-rs/toolchain@v1
         with:
-          toolchain: stable
+          toolchain: nightly
           components: clippy
           override: true
 
@@ -40,6 +40,7 @@ jobs:
         with:
           profile: minimal
           toolchain: nightly
+          components: rustfmt
           override: true
       - uses: actions-rs/cargo@v1
         with:
