refactor(workflow): clippy and tests

--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -2,6 +2,10 @@ max_width = 80
 tab_spaces = 2
 reorder_imports = false
 reorder_modules = false
+###
+#  UNSTABLE FEATURE
+#  DISABLED FOR CI FMT
+###
 # indent_style = "Block"
 # force_multiline_blocks = true
 # brace_style = "PreferSameLine"
