--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -2,10 +2,11 @@
 
 name: Clippy
 
-on: [push]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   clippy:
+    name: Clippy
     strategy:
       fail-fast: true
     runs-on: ubuntu-latest
@@ -15,21 +16,33 @@ jobs:
         uses: actions/checkout@v3
 
       # Cache Rust
-      - uses: actions/cache@v3
+      - uses: Swatinem/rust-cache@v2
         with:
-          path: ./target
           key: ${{ hashFiles('./Cargo.lock') }}
 
-      # Cache Rust
-      - uses: actions/cache@v3
+      - uses: actions-rs/toolchain@v1
         with:
-          path: ~/.cargo
-          key: ${{ hashFiles('./Cargo.lock') }}
+          toolchain: stable
+          components: clippy
+          override: true
 
-      - name: Install Rust with Clippy
-        uses: dtolnay/rust-toolchain@stable
+      - uses: actions-rs/clippy-check@v1
         with:
-          components: rustfmt, clippy
+          token: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Run Clippy
-        run: cargo clippy
+  fmt:
+    name: Fmt
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions-rs/toolchain@v1
+        with:
+          profile: minimal
+          toolchain: stable
+          components: rustfmt
+          override: true
+      - uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --all -- --check
