refactor(nanocld): vm config

--- a/examples/vm_example.yml
+++ b/examples/vm_example.yml
@@ -21,6 +21,8 @@ Resources:
             Key: vm-test.global.v
             Port: 22
 
+# See all options:
+# https://docs.next-hat.com/references/nanocl/virtual-machine
 VirtualMachines:
   - Name: vm-test
     Disk:
