--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
   nstore:
     container_name: nstore.system.c
     hostname: nstore.nanocl.internal
-    image: cockroachdb/cockroach:v23.1.4
+    image: cockroachdb/cockroach:v23.1.5
     tty: true
     ports:
       - 26257:26257
@@ -202,7 +202,7 @@ services:
         source: .
         target: /project
       - /project/target
-      - ${STATE_DIR:-${HOME}/.nanocl/state}:${STATE_DIR:-${HOME}/.nanocl/state}
+      - ${STATE_DIR:-${HOME}/.nanocl/state}:/var/lib/nanocl
       - //run/guest-services/nanocl:/run/nanocl
       - //var/run/docker.sock:/run/docker.sock
     command:
@@ -210,4 +210,4 @@ services:
       - -w
       - /project/bin/nanocld/src
       - -x
-      - run --no-default-features --features dev --bin nanocld -- --gid 1001 --state-dir ${STATE_DIR:-${HOME}/.nanocl/state}
+      - run --no-default-features --features dev --bin nanocld -- --gid 1001 --state-dir /var/lib/nanocl
