--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -46,7 +46,6 @@ serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4.1", features = ["derive", "cargo"] }
 tokio = { version = "1.32.0", features = ["fs"] }
 hyper = "0.14.27"
-users = "0.11.0"
 tokio-util = "0.7.7"
 chrono = { version = "0.4.30", default-features = false, features = [
   "std",
@@ -69,3 +68,4 @@ ctrlc = "3.3.1"
 dotenv = "0.15.0"
 toml = "0.7.8"
 ring = "0.16.19"
+nix = { version = "0.27.1", features = ["user"] }
