--- a/bin/ncdns/tests/resource_dns.yml
+++ b/bin/ncdns/tests/resource_dns.yml
@@ -4,7 +4,17 @@ ApiVersion: v0.8
 Resources:
   - Name: dns-get-started
     Kind: DnsRule
-    Version: v0.1
+    Version: v0.3
+    Config:
+      Network: system.nsp
+      Entries:
+        - Name: test.com
+          IpAddress: 127.0.0.1
+        - Name: test1.com
+          IpAddress: global.nsp
+  - Name: dns-get-started-2
+    Kind: DnsRule
+    Version: v0.3
     Config:
       Network: system.nsp
       Entries:
