--- a/bin/ncdns/tests/resource_dns.yml
+++ b/bin/ncdns/tests/resource_dns.yml
@@ -4,11 +4,21 @@ ApiVersion: v0.10
 Resources:
   - Name: dns-get-started
     Kind: DnsRule
-    Version: v0.1
+    Version: v0.3
     Config:
       Network: system.nsp
       Entries:
-        - Name: test2.com
+        - Name: test.com
           IpAddress: 127.0.0.1
-        - Name: test3.com
+        - Name: test1.com
           IpAddress: global.nsp
+  # - Name: dns-get-started-2
+  #   Kind: DnsRule
+  #   Version: v0.3
+  #   Config:
+  #     Network: system.nsp
+  #     Entries:
+  #       - Name: test2.com
+  #         IpAddress: 127.0.0.1
+  #       - Name: test3.com
+  #         IpAddress: global.nsp
