bugfix: nanocld 0.10 swagger spec

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -206,6 +206,7 @@ services:
       - ${STATE_DIR:-${HOME}/.nanocl/state}:/var/lib/nanocl
       - //run/guest-services/nanocl:/run/nanocl
       - //var/run/docker.sock:/run/docker.sock
+      - ../bollard:/bollard
     command:
       - watch
       - -w
