--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,6 @@ nanocld_client = { path = "crates/nanocld_client" }
 # ntex-cors = { git = "https://github.com/ntex-rs/ntex-extras.git" }
 #ntex-files = { git = "https://github.com/leon3s/ntex-extras", branch = "upgrade-ntex-version" }
 #ntex-multipart = { git = "https://github.com/leon3s/ntex-extras" }
-# bollard-next = { path = "../bollard" }
+bollard-next = { path = "../bollard" }
 #ntex = { git = "https://github.com/ntex-rs/ntex" }
 #ntex-tokio = { git = "https://github.com/ntex-rs/ntex" }
