--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -84,3 +84,4 @@ nanocl_utils = { version = "0.2.1", features = [
 ] }
 utoipa = { version = "3.5", features = ["yaml"], optional = true }
 notify = "6.1.1"
+ntex-cors = "0.4.0"
