--- a/bin/nanocld/Cargo.toml
+++ b/bin/nanocld/Cargo.toml
@@ -34,7 +34,7 @@ clap_mangen = { version = "0.2" }
 serde_yaml = "0.9"
 
 [dependencies]
-bollard-next = { version = "0.15.2" }
+bollard-next = { version = "0.15.3" }
 r2d2 = "0.8"
 log = "0.4.20"
 futures = "0.3"
@@ -84,3 +84,4 @@ nanocl_utils = { version = "0.2.1", features = [
 ] }
 utoipa = { version = "3.5", features = ["yaml"], optional = true }
 notify = "6.1.1"
+ntex-cors = "0.4.0"
