--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -56,7 +56,7 @@ jobs:
           cargo build --no-default-features --features test --bin nanocl
           cargo build --no-default-features --features test --bin ncproxy
           cargo build --no-default-features --features test --bin nanocld
-          docker compose -f ./docker-compose.test.yaml up -d
+          docker compose -f ./tests/docker-compose.yaml up -d
           cargo run --no-default-features --features test --bin nanocld -- --init
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 &
           sleep 8
