feature/nanocld: add metadata attribute for vm cargo and resource

--- a/crates/nanocl_stubs/Cargo.toml
+++ b/crates/nanocl_stubs/Cargo.toml
@@ -13,6 +13,7 @@ repository = "https://github.com/nxthat/nanocl"
 bench = false
 
 [features]
+default = ["serde"]
 serde = ["dep:serde", "uuid/serde", "chrono/serde"]
 utoipa = ["dep:utoipa"]
 
