feature/secrets: daemon + client + cli secrets create delete list and patch with event

--- a/examples/disable_logging.yml
+++ b/examples/disable_logging.yml
@@ -9,10 +9,7 @@ Resources:
   - Name: deploy-example.internal
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - deploy-example.global.c
-        - deploy-example2.global.c
+    Data:
       Rules:
         - Domain: deploy-example.internal
           Network: Public
