--- a/examples/args_advanced.yml
+++ b/examples/args_advanced.yml
@@ -28,9 +28,7 @@ Resources:
   - Name: ${{ Args.domain }}
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - ${{ Args.name }}.global.c
+    Data:
       Rules:
         - Domain: ${{ Args.domain }}
           Network: Public
