--- a/examples/basic_resources.yml
+++ b/examples/basic_resources.yml
@@ -7,10 +7,10 @@ Resources:
   - Name: ProxyRule
     Kind: Kind
     Version: v0.7
-    Config:
+    Data:
       Url: unix:///run/nanocl/proxy.sock
   - Name: DnsRule
     Kind: Kind
     Version: v0.3
-    Config:
+    Data:
       Url: unix:///run/nanocl/proxy.sock
