--- a/examples/crash_example.yml
+++ b/examples/crash_example.yml
@@ -9,9 +9,7 @@ Resources:
   - Name: crash-example.com
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - crash-example.global.c
+    Data:
       Rules:
         - Domain: crash-example.com
           Network: Public
