--- a/examples/deploy_args_example.yml
+++ b/examples/deploy_args_example.yml
@@ -13,9 +13,7 @@ Resources:
   - Name: ${{ Args.domain }}
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - get-started.global.c
+    Data:
       Rules:
         - Domain: ${{ Args.domain }}
           Network: Public
