--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -3,30 +3,37 @@ ApiVersion: v0.10
 
 Namespace: global
 
+Secrets:
+  - Name: cert-deploy-example
+    Kind: Tls
+    Data:
+      Tls.key: |
+        My private key
+      Tls.crt: |
+        My certificate
+
 # See all options:
 # https://docs.next-hat.com/references/nanocl/resource
 Resources:
   - Name: deploy-example.com
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - deploy-example.global.c
-        - deploy-example2.global.c
+    Metadata:
+      Cert: certbot
+    Data:
       Rules:
         - Domain: deploy-example.com
-          Network: Public
+          Network: All
+          Ssl: cert-deploy-example
           Locations:
             - Path: /
               Target:
                 Key: deploy-example2.global.c
                 Port: 9000
-
             - Path: /v1
               Target:
                 Key: deploy-example.global.c
                 Port: 9000
-
             - Path: /v2
               Target:
                 Key: deploy-example2.global.c
@@ -39,7 +46,7 @@ Cargoes:
     Container:
       Image: nexthat/nanocl-get-started:latest
       Env:
-        - APP=GET_STARTED1
+        - APP=GET_STARTED
 
   - Name: deploy-example2
     Container:
