--- a/examples/double_port_error.yml
+++ b/examples/double_port_error.yml
@@ -9,10 +9,7 @@ Resources:
   - Name: deploy-example.com
     Kind: ProxyRule
     Version: v0.7
-    Config:
-      Watch:
-        - deploy-example.global.c
-        - deploy-example2.global.c
+    Data:
       Rules:
         - Network: Public
           Port: 8181
