--- a/examples/metadata.yml
+++ b/examples/metadata.yml
@@ -11,10 +11,7 @@ Resources:
     Version: v0.7
     Metadata:
       CertManager: certbot
-    Config:
-      Watch:
-        - deploy-example.global.c
-        - deploy-example2.global.c
+    Data:
       Rules:
         - Domain: deploy-example.com
           Network: Public
