--- a/examples/replication.yml
+++ b/examples/replication.yml
@@ -9,7 +9,7 @@ Resources:
   - Name: replication-example.com
     Kind: ProxyRule
     Version: v0.7
-    Config:
+    Data:
       Watch:
         - replication-example.global.c
       Rules:
