--- a/installer.nightly.yml
+++ b/installer.nightly.yml
@@ -42,6 +42,7 @@ Cargoes:
           - /run:/run
           # {% endif %}
           - ${{ state_dir }}/proxy/certs:/etc/nginx/certs
+          - ${{ state_dir }}/proxy/secrets:/opt/secrets
           - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
           - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
@@ -63,6 +64,7 @@ Cargoes:
           # {% else %}
           - /run/nanocl:/run/nanocl
           # {% endif %}
+          - ${{ state_dir }}/proxy/secrets:/opt/secrets
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
           - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
           - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
