--- a/installer.yml
+++ b/installer.yml
@@ -153,7 +153,7 @@ Cargoes:
           # {% else %}
           - /run/nanocl:/run/nanocl
           # {% endif %}
-          - //var/run/docker.sock:/var/run/docker.sock
+          - /var/run/docker.sock:/var/run/docker.sock
           - ${{ state_dir }}:${{ state_dir }}
           - ${{ conf_dir }}:${{ conf_dir }}
 
