--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -32,6 +32,7 @@ chrono = { version = "0.4.31", default-features = false, features = [
   "clock",
 ] }
 bollard-next = { version = "0.15.4" }
+nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
 nanocld_client = { version = "0.10.0" }
 
 [dependencies]
@@ -56,7 +57,7 @@ termios = "0.3.3"
 liquid = "0.26.1"
 regex = "1.10.2"
 nanocld_client = { version = "0.10.0", features = ["tokio"] }
-nanocl_utils = { version = "0.2.3", features = [
+nanocl_utils = { version = "0.3.0", features = [
   "unix",
   "io_error",
   "http_client_error",
