--- a/bin/ncdns/Cargo.toml
+++ b/bin/ncdns/Cargo.toml
@@ -17,6 +17,7 @@ test = []
 [build-dependencies]
 clap = { version = "4.4.5", features = ["derive"] }
 clap_mangen = { version = "0.2" }
+nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
 
 [dev-dependencies]
 serde_yaml = "0.9.25"
@@ -30,7 +31,7 @@ futures = "0.3.26"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.107"
 nanocld_client = "0.10.0"
-nanocl_utils = { version = "0.2.3", features = [
+nanocl_utils = { version = "0.3.0", features = [
   "logger",
   "io_error",
   "http_error",
