--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -23,6 +23,7 @@ test = []
 [build-dependencies]
 clap = { version = "4.4.5", features = ["derive"] }
 clap_mangen = { version = "0.2" }
+nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
 
 [dev-dependencies]
 serde_yaml = "0.9.25"
@@ -40,7 +41,7 @@ notify = { version = "6.1.1", default-features = false, features = [
   "macos_kqueue",
 ] }
 nanocld_client = { version = "0.10.0" }
-nanocl_utils = { version = "0.2.3", features = [
+nanocl_utils = { version = "0.3.0", features = [
   "ntex",
   "logger",
   "io_error",
