--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -5,11 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[build-dependencies]
+nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
+
 [dependencies]
 log = "0.4.20"
 futures-util = "0.3.28"
 ntex = { version = "0.7.7", features = ["tokio"] }
 vpnkitrc = { version = "0.1.1", features = ["tokio"] }
 nanocld_client = { version = "0.10.0" }
-nanocl_utils = { version = "0.2.3", features = ["logger"] }
+nanocl_utils = { version = "0.3.0", features = ["logger"] }
 serde_json = "1.0.107"
