--- a/bin/nanocl/Cargo.toml
+++ b/bin/nanocl/Cargo.toml
@@ -17,7 +17,7 @@ path = "src/main.rs"
 
 [features]
 default = []
-dev = []
+dev = ["nanocl_utils/dev"]
 test = []
 
 [build-dependencies]
@@ -46,7 +46,6 @@ ntex = { version = "0.7.7", features = ["tokio"] }
 serde = { version = "1.0", features = ["derive"] }
 clap = { version = "4.4.5", features = ["derive", "cargo"] }
 tokio = { version = "1.33.0", features = ["fs"] }
-hyper = "0.14.27"
 tokio-util = "0.7.9"
 chrono = { version = "0.4.31", default-features = false, features = [
   "std",
