--- a/bin/ncdns/Cargo.toml
+++ b/bin/ncdns/Cargo.toml
@@ -11,7 +11,12 @@ bench = false
 path = "src/main.rs"
 
 [features]
-dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
+dev = [
+  "dep:utoipa",
+  "nanocld_client/utoipa",
+  "nanocl_utils/dev",
+  "nanocl_utils/ntex_swagger",
+]
 test = []
 
 [build-dependencies]
@@ -30,7 +35,7 @@ tokio = { version = "1.33.0", features = ["fs"] }
 futures = "0.3.26"
 serde = { version = "1.0.189", features = ["derive"] }
 serde_json = "1.0.108"
-nanocld_client = "0.10.0"
+nanocld_client = { version = "0.10.0", features = ["tokio"] }
 nanocl_error = { version = "0.1.0", features = ["io", "http", "http_client"] }
 nanocl_utils = { version = "0.3.0", features = [
   "ntex",
