--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -5,6 +5,9 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+dev = ["nanocl_utils/dev"]
+
 [build-dependencies]
 nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
 
