--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -26,14 +26,25 @@ Resources:
               Target:
                 Key: deploy-example2.global.c
                 Port: 9000
-
+        - Domain: deploy-example2.com
+          Network: All
+          Locations:
+            - Path: /
+              Target:
+                Key: deploy-example2.global.c
+                Port: 9000
+            - Path: /v1
+              Target:
+                Key: deploy-example.global.c
+                Port: 9000
+            - Path: /v2
+              Target:
+                Key: deploy-example2.global.c
+                Port: 9000
 # See all options:
 # https://docs.next-hat.com/references/nanocl/cargo
 Cargoes:
   - Name: deploy-example
-    Before:
-      Image: alpine:latest
-      Cmd: ["/bin/sh", "-c", "sleep 2"]
     Container:
       Image: nexthat/nanocl-get-started:latest
       Env:
