--- a/bin/ncvpnkit/Cargo.toml
+++ b/bin/ncvpnkit/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [features]
 dev = ["nanocl_utils/dev"]
+test = []
 
 [build-dependencies]
 nanocl_utils = { version = "0.3.0", features = ["build_tools"] }
