--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -60,10 +60,11 @@ jobs:
           cargo run --no-default-features --features test --bin nanocld -- --init
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 &
           sleep 8
-          sudo mkdir -p /var/lib/nanocl/proxy
+          sudo mkdir -p /etc/nginx
           sudo chmod 777 -R /run/nanocl
           sudo chmod 777 -R /var/lib/nanocl
-          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /var/lib/nanocl/proxy &
+          sudo chmod 777 -R /etc/nginx
+          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /etc/nginx &
           sleep 8
           sudo chmod 777 -R /run/nanocl
           mkdir -p /tmp/nginx/sites-enabled
