--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -48,8 +48,8 @@ jobs:
       - name: Setup
         run: |
           sudo sh -c "echo '\n127.0.0.1 nstore.nanocl.internal\n127.0.0.1 ndaemon.nanocl.internal' >> /etc/hosts"
-          docker pull cockroachdb/cockroach:v22.2.7
-          docker pull ghcr.io/nxthat/metrsd:0.2.0
+          docker pull cockroachdb/cockroach:v23.1.11
+          docker pull ghcr.io/nxthat/metrsd:0.3.1
           docker pull nexthat/nanocl-get-started:latest
           docker buildx build --load --cache-from type=local,src=.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t ndns:dev -f ./bin/ndns/Dockerfile .
           docker buildx build --load --cache-from type=local,src=.buildx-cache --cache-to type=local,dest=/tmp/buildx-cache -t nproxy:dev -f ./bin/nproxy/Dockerfile .
@@ -60,10 +60,11 @@ jobs:
           cargo run --no-default-features --features test --bin nanocld -- --init
           cargo run --no-default-features --features test --bin nanocld -- --hosts tcp://0.0.0.0:8585 &
           sleep 8
-          sudo mkdir -p /var/lib/nanocl/proxy
+          sudo mkdir -p /etc/nginx
           sudo chmod 777 -R /run/nanocl
           sudo chmod 777 -R /var/lib/nanocl
-          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /var/lib/nanocl/proxy &
+          sudo chmod 777 -R /etc/nginx
+          cargo run --no-default-features --features test --bin ncproxy -- --conf-dir /etc/nginx &
           sleep 8
           sudo chmod 777 -R /run/nanocl
           mkdir -p /tmp/nginx/sites-enabled
@@ -79,4 +80,3 @@ jobs:
           token: ${{ secrets.CODECOV }}
           files: ./lcov.info
           flags: unittests # optional
-
