--- a/bin/ncproxy/Cargo.toml
+++ b/bin/ncproxy/Cargo.toml
@@ -17,8 +17,14 @@ bench = false
 path = "src/main.rs"
 
 [features]
-dev = ["dep:utoipa", "nanocld_client/utoipa", "nanocl_utils/ntex_swagger"]
-test = []
+dev = [
+  "dep:utoipa",
+  "nanocld_client/utoipa",
+  "nanocl_utils/dev",
+  "nanocl_utils/ntex_swagger",
+  "nanocl_utils/ntex_test_client",
+]
+test = ["nanocl_utils/ntex_test_client"]
 
 [build-dependencies]
 clap = { version = "4.4.5", features = ["derive"] }
@@ -40,7 +46,7 @@ futures = "0.3.25"
 notify = { version = "6.1.1", default-features = false, features = [
   "macos_kqueue",
 ] }
-nanocld_client = { version = "0.10.0" }
+nanocld_client = { version = "0.10.0", features = ["tokio"] }
 nanocl_error = { version = "0.1.0", features = ["io", "http", "http_client"] }
 nanocl_utils = { version = "0.3.0", features = [
   "ntex",
