--- a/installer.yml
+++ b/installer.yml
@@ -29,7 +29,11 @@ Cargoes:
 
   - Name: nproxy
     Container:
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/nproxy:1.25.0.1-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/nproxy:1.25.0.1
+      # {% endif %}
       Tty: true
       Env:
         - TZ=Europe/Paris
@@ -47,12 +51,18 @@ Cargoes:
           - ${{ state_dir }}/proxy/letsencrypt:/etc/letsencrypt
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
           - ${{ state_dir }}/proxy/html:/usr/share/nginx/html
+          - ${{ state_dir }}/proxy/sites-available:/etc/nginx/sites-available
           - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
+          - ${{ state_dir }}/proxy/streams-available:/etc/nginx/streams-available
           - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
   - Name: ncproxy
     Container:
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/ncproxy:0.7.0-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/ncproxy:0.7.0
+      # {% endif %}
       Tty: true
       Env:
         - TZ=Europe/Paris
@@ -67,14 +77,20 @@ Cargoes:
           - ${{ state_dir }}/proxy/secrets:/opt/secrets
           - ${{ state_dir }}/proxy/conf.d:/etc/nginx/conf.d
           - ${{ state_dir }}/proxy/logs:/var/log/nginx/access
+          - ${{ state_dir }}/proxy/sites-available:/etc/nginx/sites-available
           - ${{ state_dir }}/proxy/sites-enabled:/etc/nginx/sites-enabled
+          - ${{ state_dir }}/proxy/streams-available:/etc/nginx/streams-available
           - ${{ state_dir }}/proxy/streams-enabled:/etc/nginx/streams-enabled
 
   - Name: ndns
     Container:
       Env:
         - TZ=Europe/Paris
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/ndns:2.89.0.0-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/ndns:2.89.0.0
+      # {% endif %}
       HostConfig:
         NetworkMode: host
         Binds:
@@ -84,7 +100,11 @@ Cargoes:
     Container:
       Env:
         - TZ=Europe/Paris
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/ncdns:0.3.1-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/ncdns:0.3.1
+      # {% endif %}
       Tty: true
       Cmd:
         - --conf-dir
@@ -124,7 +144,11 @@ Cargoes:
 
   - Name: ndaemon
     Container:
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/nanocld:0.10.0-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/nanocld:0.10.0
+      # {% endif %}
       Tty: true
       Hostname: ndaemon.nanocl.internal
       Cmd:
@@ -161,7 +185,11 @@ Cargoes:
   # {% if is_docker_desktop %}
   - Name: ncvpnkit
     Container:
+      # {% if channel == "nightly" %}
+      Image: ghcr.io/nxthat/ncvpnkit:0.1.0-nightly
+      # {% else %}
       Image: ghcr.io/nxthat/ncvpnkit:0.1.0
+      # {% endif %}
       Tty: true
       Hostname: ncvpnkit.nanocl.internal
       Env:
