--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -31,6 +31,9 @@ Resources:
 # https://docs.next-hat.com/references/nanocl/cargo
 Cargoes:
   - Name: deploy-example
+    Before:
+      Image: alpine:latest
+      Cmd: ["sleep", "5"]
     Container:
       Image: nexthat/nanocl-get-started:latest
       Env:
