--- a/examples/deploy_example.yml
+++ b/examples/deploy_example.yml
@@ -1,5 +1,5 @@
 Kind: Deployment
-ApiVersion: v0.10
+ApiVersion: v0.11
 
 Namespace: global
 
@@ -8,7 +8,7 @@ Namespace: global
 Resources:
   - Name: deploy-example.com
     Kind: ProxyRule
-    Version: v0.7
+    Version: v0.8
     Data:
       Rules:
         - Domain: deploy-example.com
@@ -31,7 +31,7 @@ Resources:
 # https://docs.next-hat.com/references/nanocl/cargo
 Cargoes:
   - Name: deploy-example
-    Before:
+    InitContainer:
       Image: alpine:latest
       Cmd: ["sleep", "5"]
     Container:
